﻿1.2.0
Modified Neural network pre-processing
Updated prediction breakdown to match the new calculation

1.1.3
Improved Prediction Breakdown calculation
Improved display on 7" devices
Display Reload Predictions button and message if downloaded predictions are incomplete
Fixed a crash when backing out of a page before an image is fuly loaded

1.1.2
Fixed an issue when data was restricted for the app
Improvement to prediction breakdown calculation
Fixed an issue related to blocked file access
Removed "Combine All Networks" button before predictions are downloaded to avoid crash

1.1.1
Small modification to push notifications
Fix for "odds of renewal" setting not immediately taking effect in prediction results page
Fixed a bug with prediction breakdowns if none of the factors contributed significantly to the odds
Adjustment to how base odds in prediction breakdown is calculated
Improved precision of prediction breakdown calculation
Fixed an issue loading other details when a show is missing banner art on TVDB

1.1.0
Improved statistical precision of odds (this also had the effect of improving confidence in predictions for most shows)
Improved performance switching years in prediction lists
Fixed a potential bug that occured when switching years quickly
Fixed a bug loading show details from prediction results when all years are visible

1.0.1
Fixed a bug which would crash the app if "Filter by network" was selected, but a network wasn't chosen, in Prediction Results
Fixed a bug related to adding predictions to a list
Fixed a bug that occurred when changing the option to display odds
Fixed a bug that was triggered on device rotation
Fixed a bug related to calculating what week the predictions represent

1.0.0
Initial Release